[package]
name = "mcserver"
version = "0.1.0"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "0.6.10"

[dev-dependencies]
proptest = "0.9.4"
