[package]
name = "nbt"
version = "0.1.0"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.94", features = [ "unstable" ] }
cesu8 = "1.1.0"

# for binary
serde-transcode = "1.1.0"
serde_json = "1.0.40"

[dev-dependencies]
proptest = "0.9.4"
serde-value = "0.6.0"
